# shrink-morph

./: CMakeLists.txt
.github/workflows/: build.yml  windows-gui.yml
gui/: CMakeLists.txt  main.cpp
